complete changeFailureEpics
